<resources>
    <string name="app_name">Inventory PLAY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>
    <string name="user_email">user@dell.com</string>
    <string name="user_name">User Name</string>
    <string name="image_view">image</string>
    <string name="nav_home">Home</string>
    <string name="nav_scan_svc">Inquiry</string>
    <string name="nav_track_asn">ASN</string>
    <string name="nav_health_check">Health Check</string>
    <string name="nav_assistant">Assistant</string>
    <string name="nav_share">Share</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_feed_back">Feedback</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="txtservice">Enter Value of Service TAG</string>
    <string name="txtItem">Enter Value of ITEM</string>
    <string name="txtlocation">Enter Value of LOCATION</string>
    <string-array name="tab_inquiry">
        <item>Service Tag</item>
        <item>Item</item>
        <item>Location</item>
    </string-array>
    <string-array name="tab_health_check">
        <item>Last 24 Hours</item>
        <item>Last 7 Days</item>
    </string-array>
    <string-array name="tab_track_asn">
        <item>ASN Statistics</item>
        <item>Track an ASN</item>
    </string-array>
    <string-array name="page_title">
        <item>Home</item>
        <item>Health Check</item>
        <item>Inquiry Dashboard</item>
        <item>ASN Dashboard</item>
        <item>Dell Assistant</item>
    </string-array>
    <string name="help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_notif">Health Check Alert</string>
    <string name="action_share">share</string>
    <string name="try_again_health_check">No health check found.try again later</string>
    <string name="something_went_wrong">Something went wrong, try again in few seconds</string>
    <string name="no_app_available">No App Available</string>
    <string name="share">Share</string>
    <string name="health_check_24hr">LAST 24 HOURS HEALTH CHECK REPORT</string>
    <string name="health_check_7days">LAST 7 DAYS  HEALTH CHECK REPORT</string>
    <string name="no_internet">No internet connection</string>
    <string name="wait">Please wait..</string>
    <string name="health_check_alert">Health Check Alert</string>
    <string name="no_alert_found">No Alert Found.</string>
    <string name="unable_to_process">Sorry, unable to process response now</string>
    <string name="unable_to_share">Sorry,Unable to share report.</string>
    <string name="no_health_check_share">No health check found to share</string>
    <string name="health_check_show_all">Maximized all health check.</string>
    <string name="health_check_hide_all">Minimized all health check.</string>
    <string name="in_progress">In progress</string>
    <string name="service_tag">Service Tag</string>
    <string name="scan_svc_tag">Type/Scan Service Tag</string>
    <string name="search_svc_atg">Search By Service Tag</string>
    <string name="item">Item</string>
    <string name="search_item">Search By Item</string>
    <string name="type_item">Type Item</string>
    <string name="location">Location</string>
    <string name="search_location">Search By Location</string>
    <string name="type_location">Type Location</string>
    <string name="scan_bar_code">Scan a barcode</string>
    <string name="invalid_credential">Invalid credential.</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="hint_username">USERNAME</string>
    <string name="hint_password">PASSWORD</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="processing">Processing..</string>
    <string name="login_inventory_play">INVENTORY PLAY</string>
    <string name="loading">Loading..</string>
    <string name="connect_internet_amp_tap_here"><![CDATA[Connect internet & tap here]]></string>
    <string name="asn_header_information">ASN HEADER INFORMATION</string>
    <string name="status_information">STATUS INFORMATION</string>
    <string name="todo">TODO</string>
    <string name="home_desc_bck">
		<![CDATA[
<p>The <strong>Inventory Play</strong> mobile application <br/> showcases a number of useful components <br/>thats are included for various users in<br/> Business and IT. It is a one-stop shop for anything critical pertaining to inventory.</p>
]]>
	</string>
    <string name="home_desc">
		<![CDATA[
<p>The <strong>Inventory Play</strong> mobile application  showcases a number of useful components thats are included for various users in Business and IT. It is a one-stop shop for anything critical pertaining to inventory.</p>
]]>
	</string>
    <string-array name="region_dropdown_array">
        <item>DAO</item>
        <item>APJ</item>
        <item>EMEA</item>
    </string-array>
    <string-array name="asn_dropdown_array">
        <item>ODM</item>
        <item>3PL</item>
        <item>COA</item>
    </string-array>
    <string name="api_login">
	{
	\"isValidUser\":true,
	\"isSuccess\": true,
	\"message\": \"DB error\"
	}
</string>
    <string name="api_check_point_list">
		{\"titleList\": [{\"id\": \"id1\",\"title\": \"ODM ASN ACK and SN ACK Pending >15 minutes\"},{\"id\": \"id2\",\"title\": \"Hub Collaboration Material Request and Inventory Snapshot Checkpoint Notification\"}],\"isSuccess\": true,\"message\": \"Message\"}
</string>
    <string name="api_check_point">
	{
	 \"title\": \"ODM ASN ACK and SN ACK Pending >15 minutes\",
	\"columns\": [\"Region\", \"Checkpoint\", \"Msg ID\", \"ASN ID / to_num(paltot)\", \"SENDER ID\", \"TOTAL UNITS\", \"AGING in MINs\", \"Category\", \"Remark\"],
	\"rows\": [
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"],
	[\"EMF\", \"A02-ASN PENDING >15 Minutes\", \"E103\", \"4017\", \"MES-FGA\", \"18\", \"31\", \"NON IT issue\", \"Remark\"]
	],
	\"isSuccess\": true,
	\"message\": \"Message\"
	}
	</string>
    <string name="api_health_check2">
{
    \"chartList\": [{
    		\"name\": \"ASN Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"ASN Recd\", \"ASN Ack\", \"SN Recd\", \"SN Ack\"],
			\"values\": [
				[3000, 4000, 2000, 1000,5000,2000],
				[2990, 3900, 1950, 980,4980,1980],
				[1000, 3000, 1000, 900,4000,1000],
				[990, 2900, 950, 880,3980,980]
			]
		},




		{
			\"name\": \"Material Movement Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"943 Recd\", \"943 Ack\", \"858 Recd\", \"858 Ack\"],
			\"values\": [
				[2, 5, 10, 20,30,12],
				[2, 10, 40, 30,30,12],
				[34, 67, 89, 89,30,12],
				[10, 20, 20, 50,30,12]
			]
		},
		{
			\"name\": \"Relief Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"Relief\", \"Ack\", \"Staged\", \"Validation\", \"Summarization\", \"Pre Staged\"],
			\"values\": [
				[2, 5, 10, 20, 5, 10],
				[2, 10, 40, 30, 5, 10],
				[34, 67, 89, 89, 5, 10],
				[10, 20, 20, 50, 5, 10],
				[45, 78, 54, 2, 5, 10],
				[21, 34, 25, 12, 5, 10]
			]
		},
		{
			\"name\": \"Relief GP Extract Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"Process Started\", \"Process Ended\"],
			\"values\": [
				[2, 5,10,23,78,12],
				[2, 10,10,23,78,12]
			]
		}
	]
}

    </string>
    <string name="api_health_check1">
{
    \"chartList\": [{
    		\"name\": \"ASN Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"ASN Recd\", \"ASN Ack\", \"SN Recd\", \"SN Ack\"],
			\"values\": [
				[500, \"500\", 200, 100,500,200],
				[400, \"400\", 195, 98,498,198],
				[100, 300, 100, 90,400,100],
				[99, 290, 95, 88,398,98]
			]
		},




		{
			\"name\": \"Material Movement Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"943 Recd\", \"943 Ack\", \"858 Recd\", \"858 Ack\"],
			\"values\": [
				[2, 5, 10, 20,30,12],
				[2, 10, 40, 30,30,12],
				[34, 67, 89, 89,30,12],
				[10, 20, 20, 50,30,12]
			]
		},
		{
			\"name\": \"Relief Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"Relief\", \"Ack\", \"Staged\", \"Validation\", \"Summarization\", \"Pre Staged\"],
			\"values\": [
				[2, 5, 10, 20, 5, 10],
				[2, 10, 40, 30, 5, 10],
				[34, 67, 89, 89, 5, 10],
				[10, 20, 20, 50, 5, 10],
				[45, 78, 54, 2, 5, 10],
				[21, 34, 25, 12, 5, 10]
			]
		},
		{
			\"name\": \"Relief GP Extract Health Check\",
			\"axis1\": [\"APCC\", \"BRH\", \"DAO\", \"CCC\", \"EMEA\", \"DGPC\"],
			\"axis2\": [\"Process Started\", \"Process Ended\"],
			\"values\": [
				[2, 5,10,23,78,12],
				[2, 10,10,23,78,12]
			]
		}

	]
}

    </string>
    <string name="api_asn1">{
    \"chartList\": [{
    		\"name\": \"Error Statistics  over Regions\",
			\"axis1\": [\"3PL EMEA\", \"3PL DAO\", \"3PL APJ\", \"ODM EMEA\", \"ODM DAO\", \"ODM APJ\"],
			\"axis2\": [\"error\"],
			\"values\": [
				[1200, 2225, 1001, 1121,1131,1000]
			]
		},


		{
			\"name\": \"ODM Statistics  over Regions\",
			\"axis1\": [\"APJ\", \"DAO\", \"EMEA\"],
			\"axis2\": [\"Completed %\", \"Error %\", \"Reprocessed\", \"In progress %\"],
			\"values\": [
				[2, 5, 10],
				[2, 10, 40],
				[34, 67, 89],
				[10, 20, 20]
			]
		},
		{
			\"name\": \"3PL Statistics  over Regions\",
			\"axis1\": [\"APJ\", \"DAO\", \"EMEA\"],
			\"axis2\": [\"Success %\", \"Error %\", \"Reprocessed\"],
			\"values\": [
				[20, 15, 40],
				[30, 51, 20],
				[89, 52, 14]
			]
		}
	]
}</string>
    <string name="nav_setting">Settings</string>
    <string name="action_show_all">Maximize All</string>
    <string name="action_hide_all">Minimize All</string>
    <string name="name">name</string>
    <string name="datetime">dateTime</string>
    <string name="view_error">View Error</string>
    <string name="glovia">GLOVIA</string>
    <string name="errormsg">errorMsg</string>
    <string name="svctag">svcTag</string>
</resources>