<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_vector_share"
        android:iconTint="@color/white"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_outline"
        android:iconTint="@color/white"
        android:title="@string/action_refresh"
        app:showAsAction="never"
        android:visible="false"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_show_all"
        android:icon="@drawable/ic_vector_settings"
        android:iconTint="@color/white"
        android:title="@string/action_show_all"
        app:showAsAction="never"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/action_hide_all"
        android:icon="@drawable/ic_vector_settings"
        android:iconTint="@color/white"
        android:title="@string/action_hide_all"
        app:showAsAction="never"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_vector_settings"
        android:iconTint="@color/white"
        android:title="@string/action_settings"
        app:showAsAction="never"
        tools:ignore="UnusedAttribute" />
</menu>
