<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:elevation="10dp"
    card_view:cardCornerRadius="0dp"
    tools:ignore="UnusedAttribute">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect_list"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/status"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_success_vector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/status"
            android:orientation="vertical">


            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/errormsg"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/svcTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/svctag"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/dateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datetime"
                android:textColor="@color/grey_top"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>