<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dellofc">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/dellofc" />

    <android.support.constraint.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"


        >


        <RelativeLayout

            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="?attr/actionBarSize"
            android:background="@drawable/login_border"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout">

            <ImageView
                android:id="@+id/dellLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/dell"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/gloviaTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dellLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_inventory_play"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gloviaTv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#55ffffff" />

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edittext"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:hint="@string/hint_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#55ffffff" />

            <LinearLayout
                android:id="@+id/mockCont"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="visible">

                <CheckBox
                    android:id="@+id/mock"
                    style="@style/checkbox_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="@color/white" />
            </LinearLayout>


            <Button
                android:id="@+id/submit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mockCont"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/login"
                android:textColor="@color/white" />


        </RelativeLayout>


        <FrameLayout
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/progress_border">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />

                <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    app:type="folding_circles" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progress"
                    android:gravity="center"
                    android:text="@string/processing"
                    android:textColor="@color/white" />
            </RelativeLayout>


        </FrameLayout>
    </android.support.constraint.ConstraintLayout>


</FrameLayout>
